# microservices-rmq

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: db.py  rest.py  rpc_client.py  rpc_server.py  send.py  send_client.py  settings.py
app/tests/: test_db.py  test_rest.py
