[tool.poetry]
name = "microservices-rmq"
version = "0.1.0"
description = ""
authors = ["witekosz <witekosz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tinydb = "^4.4.0"
aiohttp = {extras = ["speedups"], version = "^3.7.3"}
aio-pika = "^6.7.1"
pytest-aiohttp = "^0.3.0"
marshmallow = "^3.10.0"

[tool.poetry.dev-dependencies]
coverage = "^5.4"
isort = "^5.7.0"
black = "^20.8b1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
